# EATR-new-rate-scripts

./: .gitignore  README.md  check_order.py  pyproject.toml  rate_methods_library.py  rates_cmd.py  rates_eatr_opes.py
analysis-configs/: nnp_imetad.toml  nnp_opes.toml  ree_imetad.toml  ree_opes.toml
eatr_rates/: __init__.py  __main__.py  analysis_io.py  check_order.py  cli.py  dataset_config.py  plot_results.py  plot_style.py  rates_cmd.py  rates_eatr_opes.py
example-data/Ree_Data/E_end_end_distance_opes/: analysis.toml
example-data/Ree_Data/E_end_end_distance_opes/eruns_barr11/: run.sbatch
example-data/Ree_Data/E_end_end_distance_opes/eruns_barr13/: run.sbatch
example-data/Ree_Data/E_end_end_distance_opes/eruns_barr5/: run.sbatch
example-data/Ree_Data/E_end_end_distance_opes/eruns_barr7/: run.sbatch
example-data/Ree_Data/E_end_end_distance_opes/eruns_barr9/: run.sbatch
example-data/Ree_Data/E_end_end_distance_wt/: analysis.toml
example-data/test_results/: manifest.json  opes_flooding_summary.json  wt_flooding_summary.json  wt_regular_eatr_summary.json
example-data/test_results_cli/: opes_flooding.json  wt_flooding.json
example-data/test_results_cli/wt_regular/: pace_10000ps.json  pace_1000ps.json  pace_100ps.json  pace_10ps.json  pace_1ps.json  pace_200ps.json  pace_5000ps.json  pace_500ps.json
scripts/: analyze_imetad_dataset.py  analyze_nnp_imetad.py  analyze_nnp_opes.py  analyze_opes_dataset.py  run_example_analyses.py  run_example_cli.sh  run_ree_toml_examples.py
tests/: test_cli.py  test_rate_methods.py
(+2303 files in other folders)
