[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eatr-rates"
version = "0.1.0"
description = "Rate analysis tools for infrequent metadynamics, KTR, EATR, and OPES workflows."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "EATR rate analysis contributors"},
]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
  "matplotlib>=3.7",
]
keywords = ["metadynamics", "opes", "molecular-dynamics", "rate-analysis", "chemistry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
bayesopt = [
  "bayesian-optimization>=1.4",
]

[project.scripts]
eatr-analysis = "eatr_rates.cli:rates_cmd"
eatr-flooding-analysis = "eatr_rates.cli:rates_eatr_opes"
eatr-check-order = "eatr_rates.cli:check_order"
eatr-analysis-plot = "eatr_rates.cli:plot_results"

[tool.setuptools]
py-modules = ["rate_methods_library", "ks_censored", "rates_cmd", "rates_eatr_opes", "check_order"]

[tool.setuptools.packages.find]
include = ["eatr_rates*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
